fixed overflow issue by deleting htm class

--- a/src/App.css
+++ b/src/App.css
@@ -5,19 +5,19 @@
   margin: 0;
   padding: 0;
   
-  
 }
-html{
-  margin: 0;
-  
-  
-}
+
 body{
+  margin: 0;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
   background: #2D322B;
   color: #E3DFD6; 
-  overflow-x:hidden;
-  background-image: url(./assets/animations/wavey.json) ;
   margin: 0;
+  
+}
+::-webkit-scrollbar{
+  width: 0px;
 }
 
 .malithebrand__center-div{
@@ -25,6 +25,7 @@ body{
   justify-content: center;
   align-items: center;
   flex-direction: column;
+ 
   
   
 }
@@ -413,7 +414,15 @@ a{
 
 
 }  
-@media screen and (max-width: 664px ) {
+@media screen and (max-width: 700px ) {
+  html,body{
+   
+    overflow-x: hidden;
+  }
+.malithebrand__center-div{
  
+   display: flex;
+   justify-content: center;
+ }
 
 } 
