--- a/src/components/brands/brands.css
+++ b/src/components/brands/brands.css
@@ -7,7 +7,7 @@
     margin: 8rem;
     margin-top: 4rem;
     margin-bottom: 10em;
-  
+   
     
     
 }
@@ -23,7 +23,7 @@ img{
   min-width: 80px;
     
 }
-@media (max-width: 1350px){
+@media screen and (max-width: 1350px){
    
      .brands__container{
        
@@ -38,12 +38,12 @@ img{
      }
      
 }
-@media (max-width: 600px){
+@media screen and (max-width: 600px){
    .brands__container{
     margin-bottom: 10em;
    }
 }
-@media (max-width: 280px){
+@media scree and (max-width: 280px){
 
     .brand{
         margin: 7rem;
